2003-03-11  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* debugger/command-loop.scm: Prefix all commands imported from
	(ice-9 debugger command-loop) with debugger:.

	* boot-9.scm (process-duplicates): Use module-import-interface.
	(module-symbol-interface): Removed.
	(resolve-interface): Process #:hide; Name custom interfaces
	appropriately.
	(module-use!, module-use-interfaces!): Remove existing interfaces
	on the use-list based on module name rather than interface
	identity so that custom interfaces truly replaces their previous
	version.

	* boot-9.scm (module-override!, make-mutable-parameter,
	lookup-duplicates-handlers, default-module-duplicates-handler):
	New functions.
	(process-duplicates): Don't call duplicates handlers for duplicate
	bindings of the same variable.
	(process-define-module): Process #:replace.
	(compile-interface-spec, resolve-interface): Process #:prefix.

	* format.scm (format): Marked as replacement.

	* threads.scm (future, future-ref): Marked as replacements.

2003-03-07  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	These changes enables checking for duplicate imported bindings.

	* boot-9.scm (process-define-module): Handle #:duplicates.
	(module-use-interfaces! process-duplicates): New functions.
	(duplicate-handlers): Dictionary of duplicate handlers.
	(module-symbol-local-binding, module-symbol-binding): Bugfix.

2003-03-04  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* session.scm (apropos): Use hash-for-each instead of
	array-for-each.

2003-02-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* boot-9.scm (make-module): Changed default size from 1021 to 31
	(since the size now adapts).
	(macro-table, xformer-table): Changed default size from 523 to 61.
	(make-module): Don't call make-hash-table with zero size.

	* Makefile.am (ice9_sources): Added weak-vector.scm.

	* weak-vector.scm: New file.

	* boot-9.scm (module-clear!): Use hash-clear!.
	(module-for-each): Use hash-for-each.
	(module-map): Use hash-map.
