@@ -1,6 +1,6 @@
 ;;;; slib.scm --- definitions needed to get SLIB to work with Guile
 ;;;;
-;;;;	Copyright (C) 1997, 1998, 2000, 2001, 2002 Free Software Foundation, Inc.
+;;;;	Copyright (C) 1997, 1998, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
 ;;;;
 ;;;; This file is part of GUILE.
 ;;;; 
@@ -47,7 +47,7 @@
   :export (slib:load slib:load-source defmacro:load
 	   implementation-vicinity library-vicinity home-vicinity
 	   scheme-implementation-type scheme-implementation-version
-	   output-port-width output-port-height identity array-indexes
+	   output-port-width output-port-height array-indexes
 	   make-random-state require slib:error slib:exit slib:warn slib:eval
 	   defmacro:eval logical:logand logical:logior logical:logxor
 	   logical:lognot logical:ash logical:logcount logical:integer-length
@@ -243,7 +243,6 @@
 
 (define (output-port-width . arg) 80)
 (define (output-port-height . arg) 24)
-(define (identity x) x)
 
 ;;; {array-for-each}
 (define (array-indexes ra)
